Changed Servlets structure & decomposed